# eww-triad

./: AGENTS.md  CHANGELOG.md  Cargo.toml  LICENSE  README.md
docs/: dod-architecture.md  native-ipc.md  rust-api.md  rust-style-guide.md
examples/eww/: eww.scss  eww.yuck
src/: cli.rs  client.rs  error.rs  ipc.rs  lib.rs  main.rs  protocol.rs  state.rs  view.rs
src/cli/: tests.rs
src/client/: async_tests.rs  tests.rs
src/ipc/: tests.rs
src/protocol/: tests.rs
src/state/: tests.rs
src/view/: tests.rs
