[package]
name = "eww-triad"
version = "0.1.0"
edition = "2024"
license = "MIT"
description = "Eww adapter for Triad native IPC"
repository = "https://github.com/greenm01/eww-triad"
readme = "README.md"
keywords = ["eww", "triad", "ipc", "wayland"]
categories = ["api-bindings", "command-line-utilities"]

[features]
default = []
tokio = ["dep:tokio"]

[dependencies]
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1", optional = true, features = ["net", "io-util", "time", "macros", "rt", "rt-multi-thread"] }
