[package]
name = "eww-triad"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
license = "MIT"
description = "Eww adapter for Triad native IPC"
repository = "https://github.com/greenm01/eww-triad"
documentation = "https://docs.rs/eww-triad"
readme = "README.md"
keywords = ["eww", "triad", "ipc", "wayland"]
categories = ["api-bindings", "command-line-utilities"]
exclude = ["AGENTS.md"]

[features]
default = ["cli"]
cli = ["dep:clap"]
tokio = ["dep:tokio"]

[[bin]]
name = "eww-triad"
path = "src/main.rs"
required-features = ["cli"]

[dependencies]
clap = { version = "4.5", optional = true, features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1", optional = true, default-features = false, features = ["net", "io-util", "time", "macros", "rt", "rt-multi-thread"] }
